<resources>
    <string name="app_name">BMIapp</string>
    <string name="check">Kiểm Tra</string>
    <string name="checkBmi">Kiểm tra BMI</string>
    <string name="checkCalo">Năng lượng tiêu hao</string>
    <string name="checkBody">Kiểm tra vóc dáng (nữ)</string>
    <string name="consult">Tư vấn</string>
    <string name="consultweigh">Tư vấn cân nặng</string>
    <string name="consultbody">Tư vấn body</string>
    <string name="notebook">Ghi chú</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="information">Thông Tin</string>
    <string name="age">Tuổi</string>
    <string name="height">Chiều Cao (m)</string>
    <string name="weight">Cân Nặng (kg)</string>
    <string name="choice">Bạn muốn chọn?</string>
    <string name="gender">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="result">Kết Qủa</string>
    <string name="fillupfields">Điền đầy đủ các trường!</string>
    <string name="underweight">Cân nặng thấp</string>
    <string name="needtoincrease">Cần tăng</string>
    <string name="normal">BMI Bình thường</string>
    <string name="overweight">Thừa Cân</string>
    <string name="needtodecrease">Cần giảm:</string>
    <string name="obese">Béo phì độ I</string>
    <string name="obeseE">Tiền Béo Phì</string>
    <string name="obese1">Béo Phì Độ I</string>
    <string name="obese2">Béo Phì Độ II</string>
    <string name="obese3">Béo Phì Độ III</string>
    <string name="chosegender">Chọn giới tính của bạn!!!</string>
    <string name="empty">Không được trống!</string>
    <string name="validData">Điền dữ liệu hợp lệ, ví dụ 10.0</string>
    <string name="chuan">Vòng ngực chuẩn</string>
    <string name="chuan2">Vòng eo chuẩn</string>
    <string name="chuan3">Vòng mông chuẩn</string>
    <string name="chuachuan">Vòng ngực chưa chuẩn</string>
    <string name="chuachuan2">Vòng eo chưa chuẩn</string>
    <string name="chuachuan3">Vòng mông chưa chuẩn</string>
    <string name="bmrNu">BRM Nữ</string>
    <string name="calo">Năng lượng calo cần tiêu thụ/ ngày</string>
    <string name="adult">Người lớn</string>
    <string name="bmi">1. BMI-Bình Thường</string>
    <string name="action_chedodinhduong">Chế độ dinh dưỡng</string>
    <string name="action_chuong_trinh_luyen_tap">Chương trình luyện tập</string>
    <string name="action_che_do_sinh_hoat">Chế độ sinh hoạt</string>
    <string name="subject">Chủ đề</string>
    <string name="content">Nội dung</string>
    <string name="btn_image">Hình ảnh</string>
    <string name="btn_save">Lưu</string>
    <string name="btn_cancel">Hủy bỏ</string>
    <string name="details">Chi tiết</string>
    <string name="edit">Sửa</string>
    <string name="question">Xác nhận</string>
    <string name="messageCon">Bạn muốn xóa mục này?</string>
    <string name="yes">Vâng</string>
    <string name="no">Không</string>
    <string name="delete">Xóa</string>
    <string name="fillupfieldss">Thông tin các trường trống hoặc dữ liệu không hợp lệ!</string>
</resources>
